--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
   <depend>builtin_interfaces</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
 
   <!-- REQUIRED for packages that install interfaces -->
   <member_of_group>rosidl_interface_packages</member_of_group>
